implementación de pruebas funcionales